syntax="proto3";

package upv1;

option go_package="./;upv1";

service UserPart{
    rpc UserSignup(SignupRequest) returns (SignupResponse){}
    rpc UserLogin(LoginRequest) returns (LoginResponse){}
}

message SignupRequest{}
message SignupResponse{}
message LoginRequest{}
message LoginResponse{}